--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.5",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "path": "^0.12.7",
     "route": "^0.2.5",
